--- a/views/articles/form_field.ejs
+++ b/views/articles/form_field.ejs
@@ -12,4 +12,4 @@
 </div>
 <br>
 <a href="/" class="btn btn-secondary">Cancel</a>
-<button type="submit" class="btn btn-primary">Save</button>
+<button type="submit" class="btn border-primary btn-white">Save</button>
