--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <h1 class="mb-4">Blog Website</h1>
-        <a href="/articles/new" class="btn btn-success">Create Article</a>
+        <h1 class="mb-8 text-uppercase ">Blog Website</h1>
+        <a href="/articles/new" class="btn border-primary"><h5>Create Article</h5></a>
 
         <% articles.forEach(article=>{%>
             <div class="card mt-4">
@@ -26,10 +26,10 @@
                     <div class="card-text mb-2">
                         <%=article.description%>
                     </div>
-                    <a href="articles/<%=article.slug%>" class="btn btn-primary">Read More</a>
-                    <a href="articles/edit/<%= article.id%>" class="btn btn-info">Edit</a>
+                    <a href="articles/<%=article.slug%>" class=" text-primary ">Read More</a>
+                    <a href="articles/edit/<%= article.id%>" class=" m-2 text-succes ">Edit</a>
                     <form action="/articles/<%=article.id %>?_method=DELETE" method="POST" class="d-inline">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="rounded">Delete</button>
                     </form>
                 </div>
             </div>
