--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -9,7 +9,7 @@
 <body>
       <div class="container">
         <br>
-         <h1 class="mb-4">Create New Article</h1>
+         <h1 class="mb-4 text-success">Create New Article</h1>
          <form action="/articles" method="POST">
             <%- include('form_field') %>
          </form>
